#67523: Add iOS support to nslookup plugin (TXT records)

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "cordova-plugin-nslookup",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Cordova Nslookup Plugin",
   "cordova": {
     "id": "cordova-plugin-nslookup",
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   },
   "repository": {
